8199272: Broken assertion in ClassLoaderData::remove_handle

Added new ClassLoaderData::ChunkList::contains(oop*) function for OopHandle rather than oop.

Reviewed-by: stefank, hseigel